# ultravox-webrtc

./: .env.example  .gitignore  add_webhook.py  analyze_recent_calls.py  app.py  cert.pem  get_join_url.py  key.pem  main.py  prompt.txt  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: admin.js  app.js
templates/: index.html
transcript_analyzer/: __init__.py  analyzer.py
